# cricllm

./: .env.example  .gitignore  README.md  RUNBOOK.md  app.py  pdf_md.py  pyproject.toml  requirements.txt
.chroma/441bb0ce-eda9-4097-86df-d33b728196ab/: index_metadata.pickle
data/: README.md
scripts/: ask.py  run_ingestion.py
src/cricllm/: __init__.py  block_parser.py  cache.py  cli.py  config.py  embeddings.py  exceptions.py  hashing.py  loader.py  logging_config.py  markdown_structure.py  models.py  pipeline.py  qa.py  semantic_chunker.py  token_utils.py  vectorstore.py
templates/: index.html
tests/: test_block_parser.py  test_embeddings.py  test_hashing.py  test_markdown_structure.py  test_semantic_chunker.py  test_vectorstore.py
